# semver_rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bacon.toml  justfile
.github/workflows/: ci.yaml
bench/: .gitignore  Cargo.toml  combined.txt  gen.sh  ranges.txt  semver_node_res.txt  semver_res.txt  semver_rs_res.txt
bench/bench_semver/: index.js  package-lock.json  package.json
bench/collect_packages/: index.js  package-lock.json  package.json
bench/combine_results/: index.js  package.json
bench/src/: main.rs
benches/: version.rs
src/: builder.rs  comparator.rs  compare_fns.rs  error.rs  expressions.rs  lib.rs  operator.rs  range.rs  util.rs  version.rs
tests/: compare.rs  serde.rs
