[package]
name = "semver_rs"
version = "0.1.0"
authors = ["gngeorgiev <gngeorgiev.it@gmail.com>"]
edition = "2018"
description = "Semantic version parsing and comparison based on NPM's node-semver package."
readme = "README.md"
license-file = "LICENSE"

[dependencies]
lazy_static = "1.1"
regex = "1"
unicase = "2.3"