[package]
name = "semver_rs"
version = "0.1.1"
authors = ["gngeorgiev <gngeorgiev.it@gmail.com>"]
edition = "2018"
description = "Semantic version parsing and comparison based on NPM's node-semver package."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/gngeorgiev/semver_rs"

[badges]
travis-ci = { repository = "gngeorgiev/semver_rs", branch = "master" }

[dependencies]
lazy_static = "1.1"
regex = "1"
unicase = "2.3"