[package]
name = "semver_rs"
version = "0.1.3"
authors = ["gngeorgiev <gngeorgiev.it@gmail.com>"]
edition = "2018"
description = "Semantic version parsing and comparison based on NPM's node-semver package."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/gngeorgiev/semver_rs"

[badges]
travis-ci = { repository = "gngeorgiev/semver_rs", branch = "master" }

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
unicase = "2.6.0"
serde = { version = "1.0.130", features = ["derive"], optional = true }
thiserror = "1.0.30"

[dev_dependencies]
serde_json = "1.0"

[features]
default = []
